<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="secondphonenumberVM" type="com.vazidsapplication.app.modules.secondphonenumber.data.viewmodel.SecondphonenumberVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumngroupthree"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_21pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnclose"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowclose"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageClose"
                        android:layout_height="@dimen/_13pxh"
                        android:layout_marginBottom="@dimen/_9pxv"
                        android:layout_width="@dimen/_13pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_close"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_close"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLIVEASY"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_106pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.85"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{secondphonenumberVM.secondphonenumberModel.txtLIVEASY}"
                        style="@style/txtHelveticabold18" tools:text="@string/lbl_liveasy"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtPleaseenteryo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_44pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.0" android:singleLine="true"
                android:text="@{secondphonenumberVM.secondphonenumberModel.txtPleaseenteryo}"
                style="@style/txtRobotobold20" tools:text="@string/msg_please_enter_yo"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtYoullreceive"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_14pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.0"
                android:text="@{secondphonenumberVM.secondphonenumberModel.txtYoullreceive}"
                style="@style/txtRobotoregular14" tools:text="@string/msg_you_ll_receive"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowindiatwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyle">
                <ImageView android:id="@+id/imageIndiaTwo"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginBottom="@dimen/_16pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_india2"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_india2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNinetyOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_weight="0.13"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{secondphonenumberVM.secondphonenumberModel.txtNinetyOne}"
                    style="@style/txtMontserratregular16" tools:text="@string/lbl_91"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_weight="0.04"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{secondphonenumberVM.secondphonenumberModel.txtOne}"
                    style="@style/txtMontserratregular16" tools:text="@string/lbl"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMobileNumber"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_86pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_weight="0.69"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{secondphonenumberVM.secondphonenumberModel.txtMobileNumber}"
                    style="@style/txtMontserratregular16_1" tools:text="@string/lbl_mobile_number"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnContinue"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.02"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_18pxv"
                android:singleLine="true"
                android:text="@string/lbl_continue"
                android:textAllCaps="false" style="@style/btnSolid" tools:text="@string/lbl_continue"/>
        </LinearLayout>
        <FrameLayout android:gravity="start"
            android:id="@+id/frameAndroidThree"
            android:layout_height="@dimen/_216pxv"
            android:layout_marginTop="@dimen/_161pxv"
            android:layout_width="match_parent" style="@style/groupStylewhite_A700">
            <ImageView android:id="@+id/imageGroupThree"
                android:layout_gravity="start"
                android:layout_height="@dimen/_216pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_group3"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group3"/>
        </FrameLayout>
    </LinearLayout>
</layout>
