<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="verfiyPhoneVM" type="com.vazidsapplication.app.modules.verfiyphone.data.viewmodel.VerfiyPhoneVM"/>
    </data>
    <LinearLayout android:id="@+id/linearVerfiyPhone"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_gravity="start"
            android:layout_height="@dimen/_13pxh"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="@dimen/_17pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtVerifyPhone"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_54pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.0" android:singleLine="true"
            android:text="@{verfiyPhoneVM.verfiyPhoneModel.txtVerifyPhone}"
            style="@style/txtRobotobold20" tools:text="@string/lbl_verify_phone"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCodeissentto"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.0" android:singleLine="true"
            android:text="@{verfiyPhoneVM.verfiyPhoneModel.txtCodeissentto}"
            style="@style/txtRobotoregular14" tools:text="@string/msg_code_is_sent_to"/>

<!--        <com.mukesh.OtpView android:focusableInTouchMode="true"-->
<!--            android:id="@+id/otpViewOtpview" android:inputType="number"-->
<!--            android:itemBackground="@color/blue_200"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="@dimen/_11pxh"-->
<!--            android:layout_marginStart="@dimen/_11pxh"-->
<!--            android:layout_marginTop="@dimen/_23pxv"-->
<!--            android:layout_width="wrap_content" app:OtpItemCount="6"-->
<!--            app:OtpItemHeight="@dimen/_48pxv"-->
<!--            app:OtpItemSpacing="@dimen/_9pxh"-->
<!--            app:OtpItemWidth="@dimen/_48pxh"-->
<!--            app:OtpLineColor="@android:color/transparent" app:OtpViewType="rectangle"/>-->
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtDidntreceive"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.0" android:singleLine="true"
            android:text="@{verfiyPhoneVM.verfiyPhoneModel.txtDidntreceive}"
            style="@style/txtRobotoregular14" tools:text="@string/msg_didn_t_receive"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnVerifyAndContinue"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.02"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/msg_verify_and_cont"
            android:textAllCaps="false" style="@style/btnSolid" tools:text="@string/msg_verify_and_cont"/>
    </LinearLayout>
</layout>
